# RAPIQUE-VideoQualityAssessment

./: README.md
RAPIQUEC/: CMakeLists.txt  RAPIQUE_spatial_features.cpp  YUVread.cpp  calc_RAPIQUE_features.cpp  cnn.m  convertRGBToLAB.cpp  est_AGGD_param.cpp  est_GGD_param.cpp  gauDerivative.cpp  gen_DoG.cpp  main.cpp  nakafit.cpp  rapique_basic_extractor.cpp
